# petrel-vue

./: CMakeLists.txt  README.md  plugin.xml
.github/workflows/: build-linux.yml
include/: MyJPGPI.h
src/: MyJPGPI.cpp  worldfile.h
